--- a/colab/demo.ipynb
+++ b/colab/demo.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# New Section"
+        "# A two-stage U-Net for high-fidelity denoising of historical recordings"
       ],
       "metadata": {
         "id": "jbe_aWYkjWRH"
@@ -23,6 +23,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "This notebook is a demo of the historical music denoising method proposed in:\n",
+        "\n",
+        "> E. Moliner and V. Välimäki,, \"A two-stage U-Net for high-fidelity denosing of historical recordings\", submitted to IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP), Singapore, May, 2022\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "<img src=\"https://user-images.githubusercontent.com/64018465/131505025-e4530f55-fe5d-4bf4-ae64-cc9a502e5874.png\" alt=\"Schema represention\"\n",
+        "width=\"400px\"></p>\n",
+        "\n",
+        "Listen to our [audio samples](http://research.spa.aalto.fi/publications/papers/icassp22-denoising/)\n",
+        "\n",
+        "You can freely use it to denoise your own historical recordings.\n",
+        "\n",
         "### Instructions for running:\n",
         "\n",
         "* Make sure to use a GPU runtime, click:  __Runtime >> Change Runtime Type >> GPU__\n",
@@ -40,7 +52,7 @@
       "source": [
         "#@title #Install and Import\n",
         "\n",
-        "#@markdown Installing the required data and dependencies. This step might take some minutes\n",
+        "#@markdown Execute this cell to install the required data and dependencies. This step might take some time.\n",
         "\n",
         "#download the files\n",
         "! git clone https://github.com/eloimoliner/denoising-historical-recordings.git\n",
