--- a/colab/demo.ipynb
+++ b/colab/demo.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/eloimoliner/denoising-historical-recordings/blob/colab/colab/demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/eloimoliner/denoising-historical-recordings/blob/master/colab/demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,7 +40,8 @@
         "* Make sure to use a GPU runtime, click:  __Runtime >> Change Runtime Type >> GPU__\n",
         "* Press ▶️ on the left of each of the cells\n",
         "* View the code: Double-click any of the cells\n",
-        "* Hide the code: Double click the right side of the cell\n"
+        "* Hide the code: Double click the right side of the cell\n",
+        "* For some reason, this notebook does not work in Firefox, so please use another browser.\n"
       ],
       "metadata": {
         "id": "8UON6ncSApA9"
@@ -207,7 +208,7 @@
         "id": "TQBDTmO4mUBx"
       },
       "id": "TQBDTmO4mUBx",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +244,7 @@
         "outputId": "2d05860c-536d-45f8-92b4-d2ba6f5a54c5"
       },
       "id": "50Kmdy6AtbhW",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -296,7 +297,7 @@
         "outputId": "173f5355-2939-41fe-c702-591aa752fc7e"
       },
       "id": "0po6zpvrylc2",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +334,7 @@
         "outputId": "54588c26-0b3c-42bf-aca2-8316ab54603f"
       },
       "id": "3tEshWBezYvf",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
